fix overlapping skill pills

--- a/content/stylesheets/partials/_footer.scss
+++ b/content/stylesheets/partials/_footer.scss
@@ -8,7 +8,7 @@
 
 @media (min-width: $break-2) {
   .footer {
-    margin-top: $space-12;
+    margin-top: $space-8;
     padding: $space-8;
   }
 }
