--- a/content/stylesheets/views/_index.scss
+++ b/content/stylesheets/views/_index.scss
@@ -15,11 +15,19 @@
     margin: $space-2 $space-1;
   }
 
+  // grid changes are due to skill pills being too many!
+  @media (min-width: $break-2) {
+    .grid {
+      height: 1300px;
+    }
+  }
+
   @media (min-width: $break-3) {
     .grid {
       display: grid;
       grid-template-columns: repeat(10, 10%);
       grid-template-rows: repeat(10, 100px);
+      height: 1400px;
     }
 
     .left-grid-panel {
@@ -30,6 +38,18 @@
     .right-grid-panel {
       grid-column-start: 6;
       grid-column-end: span 5;
+    }
+  }
+
+  @media (min-width: 820px) {
+    .grid {
+      height: 1200px;
+    }
+  }
+
+  @media (min-width: 1100px) {
+    .grid {
+      height: 900px;
     }
   }
 }
